# cmake-cpp-matlab

./: .gitignore  CMakeLists.txt  README.md  addition.m  run-cmake.cmd  run-mcc.cmd  run.cmd
src/: main.cpp
